# sopel-torrentinfo

./: README.md  setup.cfg  setup.py  torrentinfo.py
sopel_torrentinfo/: __init__.py  providers.py
