[metadata]
name = sopel-torrentinfo
version = 0.1.0
description = Sopel plugin to fetch info for torrent links.
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/dgw/sopel-torrentinfo
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.1
    cssselect
    lxml
    # also requests, but Sopel itself requires that

[options.entry_points]
sopel.plugins =
    torrentinfo = sopel_torrentinfo
sopel_torrentinfo.providers =
    nyaa = sopel_torrentinfo.providers:Nyaa
